Pequena correção no index

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,10 +14,10 @@
 
         <h2>Tecnologias utilizadas</h2>
         <ul>
-            <li>PHP</li>
-            <li>Composer</li>
-            <li>PostgreSQL</li>
-            <li>Materialize</li>
+            <li>- PHP</li>
+            <li>- Composer</li>
+            <li>- PostgreSQL</li>
+            <li>- Materialize</li>
         </ul>
 
         <h2>Público alvo</h2>
